# hdr_forge

./: .gitignore  CLAUDE.md  Claude.md  README.md  build.sh  build_with_docker.sh  main.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
documentation/: README.md  advanced-examples.md  encoders.md  technical-details.md  troubleshooting.md
src/ehdr/: __init__.py  cli_output.py  dataclass.py  dolby_vision.py  encoder.py  encoding.py  ffmpeg_wrapper.py  hdr10.py  main.py  video.py
src/ehdr/cli/: argument_parser.py  cli_output.py  encoder.py  video.py  video_codec_base.py
src/ehdr/container/: mkv.py
src/ehdr/ffmpeg/: base.py  ffmpeg_wrapper.py  libx264.py  libx265.py
src/ehdr/ffmpeg/video_codec/: libx264.py  libx265.py  video_codec_base.py
src/ehdr/hdr_formats/: dolby_vision.py  hdr10.py
src/ehdr/typedefs/: encoder_typing.py  ffmpeg_wrapper.py
src/ehdr/typing/: dolby_vision_typing.py  encoder_typing.py  mkv_typing.py  video_typing.py
src/hdr_forge/: __init__.py  encoder.py  hdr_metadata_injector.py  inpaint_test.py  main.py  main_ui.py  metadata_injector.py  video.py
src/hdr_forge/analyze/: crop_video.py  detect_logo.py  grain_score.py  motion_score.py
src/hdr_forge/cli/: argument_parser.py  cli_output.py  detect_logo.py  encoder.py  video.py  video_codec_base.py
src/hdr_forge/cli/args/: convert.py  detect_logo.py  edit.py  extract_metadata.py  info.py  inject_metadata.py  pars_args.py  pars_encoder_settings.py
src/hdr_forge/container/: mkv.py
src/hdr_forge/core/: config.py  service.py
src/hdr_forge/edit_files/: __init__.py  subcommand.py
src/hdr_forge/ffmpeg/: ffmpeg_wrapper.py
src/hdr_forge/ffmpeg/video_codec/: h264_nvenc.py  hevc_nvenc.py  libsvtav1.py  libx264.py  libx265.py  nvenc_base.py  video_codec_base.py
src/hdr_forge/ffmpeg/video_codec/service/: presets.py
src/hdr_forge/hdr_formats/: dolby_vision.py  hdr10.py
src/hdr_forge/tools/: dovi_tool.py  ffmpeg.py  hdr10plus_tool.py  helper.py  hevc_hdr_editor.py  mkvmerge.py  mkvpropedit.py  subtitle_editor.py
src/hdr_forge/typedefs/: codec_typing.py  dolby_vision_typing.py  encoder_typing.py  ffmpeg_typing.py  mkv_typing.py  video_typing.py
src/hdr_forge/ui/: __init__.py  app.py  redirect.py  theme.py  widgets.py
